--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,21 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+def loadProperties(filename) {
+    def propertiesFile = rootProject.file(filename)
+    def properties = new Properties()
+    if (propertiesFile != null && propertiesFile.exists()) {
+        properties.load(new FileInputStream(propertiesFile))
+        return properties
+    }
+    return null
+}
+def secrets = loadProperties("secrets_key.properties")
+def versionProperties = loadProperties("version.properties")
+
+def code = versionProperties['versionCode'].toInteger()
+def name = versionProperties['versionName']
+
 android {
     namespace 'com.hienthai.baseprojectmvvm'
     compileSdk 33
@@ -11,18 +26,70 @@ android {
         applicationId "com.hienthai.baseprojectmvvm"
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode code
+        versionName name
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    buildTypes {
+    def ValString = "String"
+    def APP_NAME = "APP_NAME"
+    def APP_ID = "APP_ID"
+
+    flavorDimensions "release"
+    signingConfigs {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            keyAlias secrets['keyAlias']
+            keyPassword secrets['keyPassword']
+            storeFile rootProject.file(secrets['storeFile'])
+            storePassword secrets['storePassword']
         }
     }
+
+    buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+    }
+
+    productFlavors {
+        local {
+            dimension "release"
+        }
+
+        stg {
+            dimension "release"
+        }
+
+        product {
+            dimension "release"
+        }
+    }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            def appName = APP_NAME
+            def date = new Date()
+            def formattedDate = date.format('yyyyMMdd')
+            def buildType = variant.buildType.name
+            def flavor = variant.productFlavors[0].name
+
+            outputFileName = appName + '_' + formattedDate + '_' + flavor + '_' + buildType + '_' + versionName + '.apk'
+        }
+    }
+
+    buildFeatures {
+        viewBinding = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -45,5 +112,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
 }
