--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,10 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# ===== LOCAL ===== #
+APP_NAME_LOCAL=BASE PROJECT LOCAL
+# ===== STG ===== #
+APP_NAME_STG=BASE PROJECT STG
+# ===== PRODUCTION ===== #
+APP_NAME_PRODUCT=BASE PROJECT PRODUCT
