--- a/secrets_key.properties
+++ b/secrets_key.properties
@@ -1,4 +1,4 @@
-storePassword=ntq_lismijob@888-ttt
-keyAlias=upload
-keyPassword= lismijobalias@888
-storeFile=app/keystore/lismijob.jks
+storePassword=hienqpw
+keyAlias=hientx-keystore
+keyPassword=hienqpw
+storeFile=app/keystore/hientx-keystore.jks
