add some config

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,8 +23,8 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # ===== LOCAL ===== #
-APP_NAME_LOCAL=APP_NAME_LOCAL
+APP_NAME_LOCAL="APP_NAME_LOCAL"
 # ===== STG ===== #
-APP_NAME_STG=APP_NAME_STG
+APP_NAME_STG="APP_NAME_STG"
 # ===== PRODUCT ===== #
-APP_NAME_PRODUCT=APP_NAME_PRODUCT
+APP_NAME_PRODUCT="APP_NAME_PRODUCT"
