--- a/gradle.properties
+++ b/gradle.properties
@@ -28,3 +28,5 @@ APP_NAME_LOCAL="APP_NAME_LOCAL"
 APP_NAME_STG="APP_NAME_STG"
 # ===== PRODUCT ===== #
 APP_NAME_PRODUCT="APP_NAME_PRODUCT"
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
