--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.BaseProjectMVVM"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
             android:name=".presentation.MainActivity"
             android:exported="true">
             <intent-filter>
