--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,6 @@ dependencies {
 
     implementation 'com.markodevcic:peko:3.0.1'
 
-    implementation 'io.github.afreakyelf:Pdf-Viewer:2.1.1'
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
 }
